--- a/src/index.css
+++ b/src/index.css
@@ -1,68 +1,63 @@
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
+/* Google Fonts */
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
 
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
+/* Main style */
+* {
+    margin: 0;
+    padding-left: 5px;
 }
 
 body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+    background-color: #0C0C0C;
+    color: #efefef;
+    font-family: "Poppins", sans-serif;
+    font-style: normal;
+    -webkit-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+/* Style the box under mouse cursor  */
+.cursor {
+    /* Variables */
+    --x: 0px;
+    --y: 0px;
+    --visible: hidden;
+    --visibility-duration: 0s;
+    --visibility-timing: ease-in;
+    --visibility-delay: 0s;
+    /* style */
+    visibility: var(--visible);
+    opacity: 1;
+    position: fixed;
+    left: var(--x);
+    top: var(--y);
+    width: 80px;
+    height: 80px;
+    filter: blur(60px);
+    border-radius: 50%;
+    background: linear-gradient(90deg, #3F2B96 0%, #A8C0FF 100%);
+    transform: translate(-50%, -50%);
+    z-index: -999;
+    transition: visibility var(--visibility-duration) var(--visibility-timing) var(--visibility-delay),
+        opacity 0.4s ease-in-out;
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+/* Footer */
+footer {
+    margin-top: 30px;
+    color: #b5b5b5;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+.socials {
+    font-size: 1.2rem;
+    margin-bottom: 20px;
+}
+
+.social-links > a {
+    text-decoration: none;
+    color: inherit;
+    margin-right: 3px;
 }
