--- a/src/index.css
+++ b/src/index.css
@@ -2,13 +2,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
-
-/* Main style */
-* {
-    margin: 0;
-    padding-left: 5px;
+/* root style */
+:root {
+    display: flex;
+    height: 100lvh;
+    justify-content: center;
+    align-items: center;
 }
 
+
+/* Main style */
 body {
     background-color: #0C0C0C;
     color: #efefef;
@@ -52,12 +55,25 @@ footer {
 }
 
 .socials {
-    font-size: 1.2rem;
+    font-size: 1.4rem;
     margin-bottom: 20px;
 }
 
+.socials > p {
+    margin-bottom: 10px;
+}
+
+.social-links {
+    margin-left: 20px;
+}
 .social-links > a {
     text-decoration: none;
     color: inherit;
-    margin-right: 3px;
+    font-size: 1.3rem;
+    margin-right: 10px;
+    transition: color 500ms ease-in-out;
+}
+
+.social-links > a:hover{
+    color: #fff;
 }
