--- a/src/index.css
+++ b/src/index.css
@@ -8,15 +8,11 @@
     height: 100lvh;
     justify-content: center;
     align-items: center;
-}
-
-
-/* Main style */
-body {
     background-color: #0C0C0C;
     color: #efefef;
     font-family: "Poppins", sans-serif;
     font-style: normal;
+    /* prevent text selection */
     -webkit-user-select: none;
     -ms-user-select: none;
     user-select: none;
@@ -69,7 +65,7 @@ footer {
 .social-links > a {
     text-decoration: none;
     color: inherit;
-    font-size: 1.3rem;
+    font-size: 1.8rem;
     margin-right: 10px;
     transition: color 500ms ease-in-out;
 }
