--- a/src/components/ui/style.css
+++ b/src/components/ui/style.css
@@ -1,3 +1,4 @@
+/* Style for go back button */
 .go-back-button-btn {
     width: 40px;
     height: 40px;
@@ -9,6 +10,7 @@
     align-items: center;
     cursor: pointer
 }
+
 .go-back-button-btn:hover {
     background-color: rgba(255, 255, 255, 0.2);
     border: 1px solid rgba(255, 255, 255, 0.3);
