--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -1,19 +1,29 @@
-/* Style my name */
-.name {
+/* Style location and my name */
+.location {
+    color: #b5b5b5;
+    margin: 0;
+    display: flex;
+    align-items: center;
+}
+
+.location>p {
+    margin: 5px;
+}
+
+.home-name {
     font-family: "Bebas Neue", sans-serif;
     font-weight: 600;
     font-style: normal;
     letter-spacing: 10px;
     color: #d6d6d6;
-}
-
-.name>span {
     margin: 0;
     font-size: 10rem;
+    display: block;
 }
 
+
 /* Style links */
-.container {
+.home-container {
     font-size: 1.4rem;
 }
 
@@ -39,15 +49,15 @@
 
 /* Media Queries */
 @media screen and (max-width: 480px) {
-    .name {
+    .home-name {
         letter-spacing: 2px;
     }
 
-    .name>span {
+    .home-name>span {
         font-size: 5.8rem;
     }
 
-    .container {
+    .home-container {
         font-size: 1rem;
     }
 }
