--- a/src/components/ui/styles/GoBackButton.css
+++ b/src/components/ui/styles/GoBackButton.css
@@ -1,4 +1,6 @@
+/* ============== */
 /* Style for go back button */
+/* ============== */
 .go-back-button-btn {
     width: 40px;
     height: 40px;
