Solved netlify page not found error on refresh

--- a/src/index.css
+++ b/src/index.css
@@ -90,8 +90,8 @@ footer {
 }
 
 @keyframes spin {
-    form {
-        transform: rotate(-360deg);
+    from {
+        transform: rotate(0deg);
     }
 
     to {
