--- a/src/components/shared/NaElectrons/NaElectrons.css
+++ b/src/components/shared/NaElectrons/NaElectrons.css
@@ -2,7 +2,7 @@
 /* Style for NaElectors */
 /* =============== */
 .na-main-container {
-    position: absolute;
+    position: relative;
     opacity: 0.2;
     z-index: -998;
 }
@@ -20,7 +20,7 @@
 }
 
 .na-nuclease {
-    position: absolute;
+    position: fixed;
     width: 80px;
     height: 80px;
     border-radius: 50%;
@@ -31,7 +31,7 @@
 }
 
 .na-shell {
-    position: absolute;
+    position: fixed;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -45,7 +45,7 @@
 
 /* electron */
 .na-electron {
-    position: absolute;
+    position: fixed;
     width: 20px;
     height: 20px;
     border-radius: 50%;
@@ -54,7 +54,7 @@
 
 /* First shell */
 .na-K-shell {
-    position: absolute;
+    position: fixed;
     width: 150px;
     height: 150px;
     border-radius: 50%;
@@ -80,7 +80,7 @@
 
 /* Second shell */
 .na-L-shell {
-    position: absolute;
+    position: fixed;
     width: 250px;
     height: 250px;
     border-radius: 50%;
@@ -88,7 +88,7 @@
 }
 
 .na-L-shell-inside {
-    position: absolute;
+    position: fixed;
     width: 220px;
     height: 220px;
 }
@@ -135,7 +135,7 @@
 
 /* Third shell */
 .na-M-shell {
-    position: absolute;
+    position: fixed;
     width: 350px;
     height: 350px;
     border-radius: 50%;
@@ -143,7 +143,7 @@
 }
 
 .na-M-shell-inside {
-    position: absolute;
+    position: fixed;
     width: 320px;
     height: 320px;
 }
