--- a/src/index.css
+++ b/src/index.css
@@ -18,10 +18,15 @@
     user-select: none;
 }
 
+main {
+    padding: 0px 10px;
+}
+
 /* Footer */
 footer {
     margin-top: 30px;
     color: #b5b5b5;
+    padding: 0px 10px;
 }
 
 .socials {
