--- a/src/components/shared/NaElectrons/NaElectrons.css
+++ b/src/components/shared/NaElectrons/NaElectrons.css
@@ -2,9 +2,10 @@
 /* Style for NaElectors */
 /* =============== */
 .na-main-container {
-    position: relative;
+    position: fixed;
     opacity: 0.2;
     z-index: -998;
+    transform: translate(-50%, -50%);
 }
 
 .na-container {
