--- a/src/pages/Error404/Error404.css
+++ b/src/pages/Error404/Error404.css
@@ -1,19 +1,8 @@
 .error-404-main-container {
-    position: relative;
-    /* display: flex;
+    display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center; */
-}
-
-.error-404-na-container {
-    position: relative;
-    width: 100%;
-    height: 100%;
-}
-
-.error-container {
-    margin-top: 200px;
+    align-items: center;
 }
 
 .error-text {
