--- a/src/components/shared/NaElectrons/NaElectrons.css
+++ b/src/components/shared/NaElectrons/NaElectrons.css
@@ -50,7 +50,7 @@
     width: 20px;
     height: 20px;
     border-radius: 50%;
-    background-color: white;
+    background-color: #fff;
 }
 
 /* First shell */
@@ -59,7 +59,7 @@
     width: 150px;
     height: 150px;
     border-radius: 50%;
-    border: 1px solid white;
+    border: 1px solid #fff;
 }
 
 /* this shell will spin */
@@ -85,7 +85,7 @@
     width: 250px;
     height: 250px;
     border-radius: 50%;
-    border: 1px solid white;
+    border: 1px solid #fff;
 }
 
 .na-L-shell-inside {
@@ -140,7 +140,7 @@
     width: 350px;
     height: 350px;
     border-radius: 50%;
-    border: 1px solid white;
+    border: 1px solid #fff;
 }
 
 .na-M-shell-inside {
