--- a/src/components/ui/styles/GoBackButton.css
+++ b/src/components/ui/styles/GoBackButton.css
@@ -5,15 +5,18 @@
     width: 40px;
     height: 40px;
     border-radius: 50%;
-    background-color: rgba(255, 255, 255, 0.1);
-    border: 1px solid rgba(255, 255, 255, 0.2);
+    background-color: var(--btn-dark-1);
+    border: 1px solid var(--btn-dark-2);
     display: flex;
     justify-content: center;
     align-items: center;
-    cursor: pointer
+    cursor: pointer;
+    transition-property: background-color, color;
+    transition-duration: 300ms;
+    transition-timing-function: ease-in-out;
 }
 
 .go-back-button-btn:hover {
-    background-color: rgba(255, 255, 255, 0.2);
-    border: 1px solid rgba(255, 255, 255, 0.3);
+    background-color: var(--btn-dark-2);
+    border: 1px solid var(--btn-dark-3);
 }
