--- a/src/index.css
+++ b/src/index.css
@@ -4,29 +4,37 @@
 
 /* root style */
 :root {
-    display: flex;
-    height: 100lvh;
-    justify-content: center;
-    align-items: center;
-    background-color: #0C0C0C;
-    color: #efefef;
+    background-color: var(--bg-dark);
+    color: var(--primary-text-color);
     font-family: "Poppins", sans-serif;
     font-style: normal;
     /* prevent text selection */
     -webkit-user-select: none;
     -ms-user-select: none;
     user-select: none;
-}
 
-main {
-    padding: 0px 10px;
+    /* color variables */
+    --bg-dark: #0C0C0C;
+    --text-dark: #0C0C0C;
+    --primary-text-color: #efefef;
+    --secondary-text-color: #d6d6d6;
+    --text-gray: #b5b5b5;
+    --text-blue: #6090e8;
+
+    --btn-dark-1: rgba(255, 255, 255, 0.1);
+    --btn-dark-2: rgba(255, 255, 255, 0.2);
+    --btn-dark-3: rgba(255, 255, 255, 0.3);
 }
 
 /* Footer */
 footer {
     margin-top: 30px;
-    color: #b5b5b5;
+    color: var(--text-gray);
     padding: 0px 10px;
+}
+
+.root-footer {
+    margin-left: 45px;
 }
 
 .socials {
@@ -57,6 +65,29 @@ footer {
 /* Predefined css */
 .bold {
     font-weight: 600;
+}
+
+.btn {
+    text-decoration: none;
+    color: var(--primary-text-color);
+    background-color: var(--btn-dark-1);
+    border: 1px solid var(--btn-dark-2);
+    padding: 15px 30px;
+    border-radius: 10px;
+    font-weight: 600;
+    transition-property: background-color, color;
+    transition-duration: 500ms;
+    transition-timing-function: ease-in-out;
+}
+
+.btn-pill {
+    border-radius: 50px;
+}
+
+.btn:hover {
+    color: var(--text-dark);
+    background-color: #fff;
+    border: 1px solid var(--btn-dark-3);
 }
 
 /* Animations */
