--- a/src/pages/About/About.css
+++ b/src/pages/About/About.css
@@ -2,6 +2,10 @@
     margin: 0;
 }
 
+.about-page {
+    margin: 20px 35px;
+}
+
 .about-container {
     display: flex;
     flex-direction: column;
