--- a/src/index.css
+++ b/src/index.css
@@ -29,6 +29,9 @@
     --bg-dark-1: rgba(255, 255, 255, 0.1);
     --bg-dark-2: rgba(255, 255, 255, 0.2);
     --bg-dark-3: rgba(255, 255, 255, 0.3);
+    --bg-white: #efefef;
+    --bg-white-2: #dedede;
+    --bg-blue: #6090e8;
 }
 
 /* Footer */
