--- a/src/index.css
+++ b/src/index.css
@@ -21,6 +21,7 @@
     --secondary-text-color: #d6d6d6;
     --text-gray: #b5b5b5;
     --text-blue: #6090e8;
+    /* --text-lightblue: #5356FF; */
     /* Button */
     --btn-dark-1: rgba(255, 255, 255, 0.1);
     --btn-dark-2: rgba(255, 255, 255, 0.2);
@@ -110,6 +111,16 @@ footer {
 .warning {
     color: #d90429 !important;
     opacity: 1 !important;
+}
+
+.tooltip {
+    display: none;
+    font-size: 0.85rem;
+}
+
+.tooltip-parent:hover .tooltip {
+    display: block;
+    position: absolute;
 }
 
 /* Animations */
