--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,7 +1,3 @@
-/* Google Fonts */
-@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-
 /* Tailwind CSS */
 @tailwind base;
 @tailwind components;
@@ -11,15 +7,13 @@
 :root {
   background-color: #0c0c0c;
   color: #efefef;
-  font-family: 'Poppins', sans-serif;
-  font-style: normal;
   /* prevent text selection */
-  -webkit-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
+  /*-webkit-user-select: none;*/
+  /*-ms-user-select: none;*/
+  /*user-select: none;*/
 }
 
-@layer base {
+@layer utilities {
   .button {
     @apply text-primary bg-dark-1 border border-dark-2 px-4 py-2 rounded-xl font-semibold;
   }
@@ -52,4 +46,32 @@
   .spinner::before {
     @apply left-auto top-auto -right-[8px] bottom-0;
   }
+}
+
+/* Style the box under mouse cursor  */
+.cursor {
+  /* Variables */
+  --x: 0px;
+  --y: 0px;
+  --visible: hidden;
+  --visibility-duration: 0s;
+  --visibility-timing: ease-in;
+  --visibility-delay: 0s;
+  /* style */
+  visibility: var(--visible);
+  opacity: 1;
+  position: fixed;
+  left: var(--x);
+  top: var(--y);
+  width: 80px;
+  height: 80px;
+  filter: blur(50px);
+  border-radius: 50%;
+  background: linear-gradient(90deg, #3f2b96 0%, #a8c0ff 100%);
+  transform: translate(-50%, -50%);
+  z-index: -999;
+  transition:
+    visibility var(--visibility-duration) var(--visibility-timing)
+      var(--visibility-delay),
+    opacity 0.4s ease-in-out;
 }
