--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,7 +7,6 @@
 :root {
   background: linear-gradient(120deg, #0b1215, #0a0a0a, #0b1215);
   background-color: #0a0a0a;
-  color: #fff;
   background-repeat: no-repeat;
 
   /*scroll-behavior: smooth;*/
@@ -15,6 +14,27 @@
   /*-webkit-user-select: none;*/
   /*-ms-user-select: none;*/
   /*user-select: none;*/
+}
+
+@layer base {
+  h1 {
+    @apply font-bold text-4xl md:text-5xl xl:text-6xl;
+  }
+  h2 {
+    @apply font-semibold text-3xl md:text-4xl xl:text-5xl;
+  }
+  h3 {
+    @apply font-medium text-2xl md:text-3xl xl:text-4xl;
+  }
+  h4 {
+    @apply font-medium text-xl md:text-2xl xl:text-3xl;
+  }
+  h5 {
+    @apply font-medium text-lg md:text-xl xl:text-2xl;
+  }
+  h6 {
+    @apply font-medium text-base md:text-lg xl:text-xl;
+  }
 }
 
 @layer utilities {
