--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -9,7 +9,7 @@
   background-color: #0a0a0a;
   background-repeat: no-repeat;
 
-  /*scroll-behavior: smooth;*/
+  scroll-behavior: smooth;
   /* prevent text selection */
   /*-webkit-user-select: none;*/
   /*-ms-user-select: none;*/
