--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,7 +5,8 @@
 
 /* root style */
 :root {
-  background: linear-gradient(120deg, #0b1215, #0a0a0a, #0b1215);
+  --background-gradient: linear-gradient(120deg, #0b1215, #0a0a0a, #0b1215);
+  background: var(--background-gradient);
   background-color: #0a0a0a;
   background-repeat: no-repeat;
 
